@@ -50,6 +50,7 @@
  ~ SQLite back-end replaced - Zentus SqliteJDBC is now used 
     (see README.HTM for details)
  ! OpenPisteMap tile url updated
+ + New atlas format: NaviComputer
 
  1.7: (2010-02-05)
  ~ Project has been renamed to "Mobile Atlas Creator" taking account that
